# html5-picture

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  rustfmt.toml
src/: core.rs  fs.rs  html5.rs  lib.rs  main.rs  path.rs  processing.rs  utils.rs  webp.rs
src/utils/: imageops.rs  resized_image_details.rs
src/webp/: parameter.rs  processor.rs
src/webp/processor/: batch.rs  single.rs
