[package]
name = "html5-picture"
version = "0.0.3-alpha"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2018"
license = "MIT"
description = "Batch optimizes your images to cwepb. Generates html5 picture tags."
homepage = "https://docs.rs/html5-picture"
documentation = "https://docs.rs/html5-picture"
repository = "https://github.com/emirror-de/html5-picture"
readme = "README.md"
keywords = ["html5", "picture", "convert", "wepb"]
categories = ["command-line-utilities", "compression", "multimedia::images", "web-programming"]

[[bin]]
name = "html5-picture"

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
walkdir = "2"
pretty_env_logger = "0.4.0"
pathdiff = "0.2.0"
