[package]
name = "html5-picture"
version = "0.2.2"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2024"
license = "MIT"
description = "Batch optimizes your images to wepb. Generates html5 picture tags."
homepage = "https://docs.rs/html5-picture"
documentation = "https://docs.rs/html5-picture"
repository = "https://github.com/emirror-de/html5-picture"
readme = "README.md"
keywords = ["html5", "picture", "convert", "wepb"]
categories = [
    "command-line-utilities",
    "compression",
    "multimedia::images",
    "web-programming",
]

[[bin]]
name = "html5-picture"

[dependencies]
clap = { version = "3.0.5", features = [
    "derive",
    "suggestions",
    "color",
    "cargo",
] }
log = "0.4.14"
walkdir = "2"
pretty_env_logger = "0.5.0"
pathdiff = "0.2.0"
image = "0.25"
libmath = "0.2.1"
tokio = { version = "1.11.0", features = ["full"] }
webp = "0.3.0"
futures = "0.3.12"
indicatif = "0.17.0"
queue = "0.3.1"
fs_extra = "1.2.0"
serde = { version = "1.0.122", features = ["derive"] }
